--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,8 +11,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          allow-no-subscriptions: true
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Checkout source code
         uses: actions/checkout@v2
